updated the menu and attached link to menu pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
   <!-- Header -->
   <header>
+ 
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#menu">Menu</a>
+      <a href="#about">About</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#testimonials">Testimonials</a>
+    </nav>
+  
+
     <h1>Sweet Crumbs Bakery</h1>
     <p>Handmade cakes & cookies with love 🍪</p>
   </header>
@@ -25,28 +35,42 @@
   </section>
 
   <!-- Menu -->
-  <section class="menu" id="menu">
-    <h2>Our Menu</h2>
-    <div class="cards">
-      <div class="card">
+<section class="menu" id="menu">
+  <h2>Our Menu</h2>
+  <div class="cards">
+
+    <!-- Cake Card -->
+    <div class="card">
+      <a href="cake.html">
         <img src="chocolate-cake-3.jpg" alt="Chocolate Cake">
-        <p>Chocolate Fudge Cake</p>
-      </div>
-      <div class="card">
-        <img src="cupcake.jpeg" alt="Cupcake">
-        <p>Vanilla Cupcakes</p>
-      </div>
-      <div class="card">
-        <img src="R.jpeg" alt="Cookies">
-        <p>Chunky Choco Cookies</p>
-      </div>
+        <p>Cakes We Love</p>
+      </a>
     </div>
-  </section>
+
+    <!-- Cupcake Card -->
+    <div class="card">
+      <a href="cupcake.html">
+        <img src="cupcake.jpeg" alt="Cupcake">
+        <p>Tasty Cupcakes</p>
+      </a>
+    </div>
+
+    <!-- Cookie Card -->
+    <div class="card">
+      <a href="cookies.html">
+        <img src="R.jpeg" alt="Cookies">
+        <p>Crushworthy Cookies</p>
+      </a>
+    </div>
+
+  </div>
+</section>
 
   <!-- About -->
   <section class="about" id="about">
     <h2>About Us</h2>
-    <p>Hi, I'm Aditi — a self-taught baker from Nagpur who loves crafting sweet moments. From birthdays to bridal showers, I make your celebrations delicious!</p>
+    <p>Hi, I'm Aditi — a self-taught baker from Nagpur who loves crafting sweet moments. From birthdays to bridal showers, I make your celebrations delicious!
+This is actually just a demo website which shows how the website might turn out and we can costomize it according to our needs .Thank you!!!</p>
   </section>
 
   <!-- Gallery -->
