--- a/cookies.html
+++ b/cookies.html
@@ -58,7 +58,7 @@
   </div>
 
   <div class="item">
-    <img src="cookie2.jpg" alt="Oatmeal Raisin Cookie">
+    <img src="cookie2.jpeg" alt="Oatmeal Raisin Cookie">
     <p>Oatmeal Raisin Cookie – ₹35</p>
   </div>
 
