--- a/cake.html
+++ b/cake.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background-color: #fff6f8;
+      background-color: #fff0f5;
       padding: 1rem;
       text-align: center;
       margin: 0;
@@ -24,7 +24,7 @@
       justify-items: center;
     }
     .item {
-      background-color: pink;
+      background-color: #FFF8F0;
       border-radius: 10px;
       padding: 1rem;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
