--- a/cookies.html
+++ b/cookies.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background-color: #fff6f8;
+      background-color: #fff0f5;
       padding: 1rem;
       text-align: center;
       margin: 0;
@@ -24,7 +24,8 @@
       justify-items: center;
     }
     .item {
-      background-color: pink;
+      background-color: #FFF8F0
+;
       border-radius: 10px;
       padding: 1rem;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -58,7 +59,7 @@
   </div>
 
   <div class="item">
-    <img src="cookie2.jpg" alt="Oatmeal Raisin Cookie">
+    <img src="cookie2.jpeg" alt="Oatmeal Raisin Cookie">
     <p>Oatmeal Raisin Cookie – ₹35</p>
   </div>
 
@@ -76,8 +77,7 @@
     <img src="cookie5.jpg" alt="Almond Crunch Cookie">
     <p>Almond Crunch Cookie – ₹40</p>
   </div>
->/div>
 
-  <a href="index.html" class="btn">Back to Home</a>
+ <a href="index.html" class="btn">Back to Home</a>
 </body>
 </html>
