created a new folder to keep images

--- a/cupcake.html
+++ b/cupcake.html
@@ -78,27 +78,27 @@
   <h1>Our Cupcakes</h1>
   <div class="grid">
   <div class="item">
-    <img src="cupcake1.jpg" alt="Classic Vanilla Cupcake">
+    <img src="images/cupcake1.jpg" alt="Classic Vanilla Cupcake">
     <p>Classic Vanilla Cupcake – ₹70</p>
   </div>
 
   <div class="item">
-    <img src="cupcake2.jpg" alt="Choco Lava Cupcake">
+    <img src="images/cupcake2.jpg" alt="Choco Lava Cupcake">
     <p>Choco Lava Cupcake – ₹80</p>
   </div>
 
   <div class="item">
-    <img src="cupcake3.jpeg" alt="Red Velvet Cupcake">
+    <img src="images/cupcake3.jpeg" alt="Red Velvet Cupcake">
     <p>Red Velvet Cupcake – ₹85</p>
   </div>
 
   <div class="item">
-    <img src="cupcake4.jpeg" alt="Oreo Crunch Cupcake">
+    <img src="images/cupcake4.jpeg" alt="Oreo Crunch Cupcake">
     <p>Oreo Crunch Cupcake – ₹75</p>
   </div>
 
   <div class="item">
-    <img src="cupcake5.jpg" alt="Strawberry Swirl Cupcake">
+    <img src="images/cupcake5.jpg" alt="Strawberry Swirl Cupcake">
     <p>Strawberry Swirl Cupcake – ₹70</p>
   </div>
 </div>
