--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Cake Card -->
     <div class="card">
       <a href="cake.html">
-        <img src="chocolate-cake-3.jpg" alt="Chocolate Cake">
+        <img src="images/chocolate-cake-3.jpg" alt="Chocolate Cake">
         <p>Cakes We Love</p>
       </a>
     </div>
@@ -54,7 +54,7 @@
     <!-- Cupcake Card -->
     <div class="card">
       <a href="cupcake.html">
-        <img src="cupcake.jpeg" alt="Cupcake">
+        <img src="images/cupcake.jpeg" alt="Cupcake">
         <p>Tasty Cupcakes</p>
       </a>
     </div>
@@ -62,7 +62,7 @@
     <!-- Cookie Card -->
     <div class="card">
       <a href="cookies.html">
-        <img src="R.jpeg" alt="Cookies">
+        <img src="images/R.jpeg" alt="Cookies">
         <p>Crushworthy Cookies</p>
       </a>
     </div>
@@ -83,12 +83,12 @@ This is actually just a demo website which shows how the website might turn out 
     <div class="slider">
       <button class="prev">&#10094;</button>
       <div class="slider-track">
-        <img src="gallery2.jpeg" alt="Cake">
-        <img src="gallery1.jpg" alt="Cupcake">
-        <img src="gallery3.jpg" alt="Cookie">
-        <img src="gallery5.jpg" alt="Cake">
-        <img src="gallery6.jpg" alt="Cupcake">
-        <img src="gallery4.jpg" alt="Cookie">
+        <img src="images/gallery2.jpeg" alt="Cake">
+        <img src="images/gallery1.jpg" alt="Cupcake">
+        <img src="images/gallery3.jpg" alt="Cookie">
+        <img src="images/gallery5.jpg" alt="Cake">
+        <img src="images/gallery6.jpg" alt="Cupcake">
+        <img src="images/gallery4.jpg" alt="Cookie">
       </div>
       <button class="next">&#10095;</button>
     </div>
