--- a/cake.html
+++ b/cake.html
@@ -53,42 +53,42 @@
   <h1>Our Cakes</h1>
   <div class="grid">
     <div class="item">
-      <img src="cake1.jpg" alt="Chocolate Drip Cake">
+      <img src="images/cake1.jpg" alt="Chocolate Drip Cake">
       <p>Chocolate Drip Cake – ₹499 (half kg)</p>
     </div>
 
     <div class="item">
-      <img src="cake2.jpg" alt="Rosette Cream Cake">
+      <img src="images/cake2.jpg" alt="Rosette Cream Cake">
       <p>Rosette Cream Cake – ₹550 (half kg)</p>
     </div>
 
     <div class="item">
-      <img src="cake3.jpg" alt="Red Velvet Heart Cake">
+      <img src="images/cake3.jpg" alt="Red Velvet Heart Cake">
       <p>Red Velvet Heart Cake – ₹600 (half kg)</p>
     </div>
 
     <div class="item">
-      <img src="cake4.jpg" alt="Butterscotch Delight Cake">
+      <img src="images/cake4.jpg" alt="Butterscotch Delight Cake">
       <p>Butterscotch Delight – ₹520 (half kg)</p>
     </div>
 
     <div class="item">
-      <img src="cake5.jpg" alt="Fresh Fruit Cream Cake">
+      <img src="images/cake5.jpg" alt="Fresh Fruit Cream Cake">
       <p>Fresh Fruit Cream Cake – ₹580 (half kg)</p>
     </div>
 
     <div class="item">
-      <img src="cake6.jpg" alt="Pineapple Classic Cake">
+      <img src="images/cake6.jpg" alt="Pineapple Classic Cake">
       <p>Pineapple Classic Cake – ₹500 (half kg)</p>
     </div>
 
     <div class="item">
-      <img src="cake7.jpg" alt="KitKat Chocolate Cake">
+      <img src="images/cake7.jpg" alt="KitKat Chocolate Cake">
       <p>KitKat Chocolate Cake – ₹599 (half kg)</p>
     </div>
 
     <div class="item">
-      <img src="cake8.jpg" alt="Black Forest Cake">
+      <img src="images/cake8.jpg" alt="Black Forest Cake">
       <p>Black Forest Cake – ₹480 (half kg)</p>
     </div>
   </div>
