--- a/cookies.html
+++ b/cookies.html
@@ -54,27 +54,27 @@
   <h1>Our Cookies</h1>
   <div class="grid">
   <div class="item">
-    <img src="cookie1.jpg" alt="Choco Chip Cookie">
+    <img src="images/cookie1.jpg" alt="Choco Chip Cookie">
     <p>Choco Chip Cookie – ₹40</p>
   </div>
 
   <div class="item">
-    <img src="cookie2.jpeg" alt="Oatmeal Raisin Cookie">
+    <img src="images/cookie2.jpeg" alt="Oatmeal Raisin Cookie">
     <p>Oatmeal Raisin Cookie – ₹35</p>
   </div>
 
   <div class="item">
-    <img src="cookie3.jpg" alt="Double Chocolate Cookie">
+    <img src="images/cookie3.jpg" alt="Double Chocolate Cookie">
     <p>Double Chocolate Cookie – ₹45</p>
   </div>
 
   <div class="item">
-    <img src="cookie4.jpeg" alt="Butter Shortbread Cookie">
+    <img src="images/cookie4.jpeg" alt="Butter Shortbread Cookie">
     <p>Butter Shortbread Cookie – ₹30</p>
   </div>
 
   <div class="item">
-    <img src="cookie5.jpg" alt="Almond Crunch Cookie">
+    <img src="images/cookie5.jpg" alt="Almond Crunch Cookie">
     <p>Almond Crunch Cookie – ₹40</p>
   </div>
 
